Bug 516403 - Klipper's "Clear History" action fails to clear passwords and other secrets that weren't added to the history, so they can still be pasted
Summary: Klipper's "Clear History" action fails to clear passwords and other secrets t...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.6.0
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-20 16:48 UTC by sergeyprotserovca
Modified: 2026-02-28 01:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sergeyprotserovca 2026-02-20 16:48:30 UTC
SUMMARY

With Firefox 147.0.4, when I click a "Copy" button for a password in Firefox password manager, it gets copied to the Wayland clipboard, so it can be pasted, but it does not appear in Klipper history, presumably because of a special password hint.

The downside of that is that when I press a keyboard shortcut to clear the clipboard history, it doesn't affect this password in the Wayland clipboard at all, so it remains there. Most other copied objects appear in the Klipper history, and are properly purged from there AND from the Wayland clipboard upon executing the "Clear Clipboard History" action.

I would like to request either that this action always clears the Wayland clipboard, or that special handling of passwords can be disabled.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 43, Plasma 6.6.0
KDE Plasma Version: 6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.1
Comment 1 sergeyprotserovca 2026-02-20 17:11:37 UTC
> or that special handling of passwords can be disabled

I mean, made configurable. This may also prove beneficial because the Klipper's icon will appear in the tray as a clear indication that something was copied, even for passwords.
Comment 2 Nate Graham 2026-02-20 17:36:22 UTC
Makes sense, yeah.
Comment 3 Bug Janitor Service 2026-02-23 16:33:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6343
Comment 4 Tobias Fella 2026-02-24 10:12:36 UTC
Git commit e1f59351f7851628ec8f2f5b635d13f5d96caf69 by Tobias Fella, on behalf of Tobias Fella.
Committed on 24/02/2026 at 09:32.
Pushed by tfella into branch 'master'.

Also remove secrets from clipboard when clearing it

While they're not stored in the database at all, also clearing them from the system clipboard makes sense.

M  +2    -0    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e1f59351f7851628ec8f2f5b635d13f5d96caf69
Comment 5 Nate Graham 2026-02-27 23:58:33 UTC
Git commit 32a51c2aea9b1358f46bc9472c94886b3cf103fd by Nate Graham.
Committed on 27/02/2026 at 23:35.
Pushed by ngraham into branch 'Plasma/6.6'.

Also remove secrets from clipboard when clearing it

While they're not stored in the database at all, also clearing them from the system clipboard makes sense.


(cherry picked from commit e1f59351f7851628ec8f2f5b635d13f5d96caf69)

Co-authored-by: Tobias Fella <tobias.fella@kde.org>

M  +2    -0    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/32a51c2aea9b1358f46bc9472c94886b3cf103fd