Also remove secrets from clipboard when clearing it

While they're not stored in the database at all, also clearing them from the system clipboard makes sense.

BUG: 516403


(cherry picked from commit e1f59351f7851628ec8f2f5b635d13f5d96caf69)

Co-authored-by: Tobias Fella <tobias.fella@kde.org>